--- a/templates/home.html
+++ b/templates/home.html
@@ -26,9 +26,11 @@
             <p class="text-muted">{% now "jS F Y" %}</p>
             <div class="col-md-7 col-lg-7" style="height: 450px; overflow: scroll;">
                 <!-- List of all the tasks for the day -->
+                {% for task in tasks %}
+
                 <div class="card m-1">
                     <div class="card-body">
-                        This is some Task
+                          {{ task.task }}
                         <span style="position: relative; float: right;">
                             <a class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
                             <a class="btn btn-danger"><i class="fa fa-trash"></i></a>
@@ -37,15 +39,20 @@
                     </div>
                 </div>
 
+                {% endfor %}
+
             </div>
             <div class="col-md-5 col-lg-5">
                 <h5>Completed Tasks</h5>
                 <!-- List of all the tasks that have completed -->
+                {% for task in completed_tasks %}
                 <div class="card m-1">
                     <div class="card-body">
-                        This is the completed task.
+                        {{ task.task }}
                     </div>
                 </div>
+
+                {% endfor %}
             </div>
         </div>
         <div class="row">
