--- a/templates/home.html
+++ b/templates/home.html
@@ -32,7 +32,7 @@
                     <div class="card-body">
                           {{ task.task }}
                         <span style="position: relative; float: right;">
-                            <a class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
+                            <a href="{% url 'mark_as_done' task.pk %}" class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
                             <a class="btn btn-danger"><i class="fa fa-trash"></i></a>
                             <a class="btn btn-primary"><i class="fa fa-pencil"></i></a>
                         </span>
@@ -49,6 +49,9 @@
                 <div class="card m-1">
                     <div class="card-body">
                         {{ task.task }}
+                         <span style="position: relative; float: right;">
+                            <a href="{% url 'mark_as_undone' task.pk %}" class="btn btn btn-danger"><i class="fa fa-times"></i> Mark as Undone</a>
+                        </span>
                     </div>
                 </div>
 
